# approxSSIMate

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
.github/: FUNDING.yml
approxssimate/: __init__.py  approxssim.py  cli.py  core.py  mse2ssim.py  ssim.py
notebooks/: 01_ssim_psnr_foundations.ipynb
